force-app/main/default/objects/Product_Line_Score__c/Product_Line_Score__c.object-meta.xml
<CustomObject>
    <label>产品线分数</label>
    <nameField>
        <displayFormat>PLS-{000000}</displayFormat>
        <label>Product Line Score编号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>