force-app/main/default/objects/Product_Line_Score__c/fields/Customer_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Customer_Product_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Product Line</label>
    <referenceTo>Customer_Product_Line__c</referenceTo>
    <relationshipLabel>Product Line Score</relationshipLabel>
    <relationshipName>Customer_Product_LineRes</relationshipName>
    <type>Lookup</type>
</CustomField>