force-app/main/default/objects/Product_Line_Score__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <formula>TEXT(Customer_Product_Line__r.Rank__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rank</label>
    <type>Text</type>
</CustomField>