force-app/main/default/objects/Product_Line_Score__c/fields/Score_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Score_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Score Sheet</label>
    <referenceTo>Score_Sheet__c</referenceTo>
    <relationshipLabel>Product Line Score</relationshipLabel>
    <relationshipName>Score_Sheet_res</relationshipName>
    <type>Lookup</type>
</CustomField>